# University

./: .gitignore  .gitmodules
Grade_3/: .~lock.Титульний_Лист.docx#  Титульний_Лист.docx
Grade_3/ICT/: readme.md
Grade_3/ICT/Practice/: ТІК_Пр_6_ІПЗ-3.04_Мельник_Руслана.docx
Grade_3/ICT/Practice/Work_4/: ТІК_Пр_4_ІПЗ-3.04_Бухта_Микита.docx
Grade_3/ICT/Practice/Work_5/: ТІК_Пр_5_ІПЗ-3.04_Бухта_Микита.docx
Grade_3/ICT/Practice/Work_6/: ТІК_Пр_6_ІПЗ-3.04_Бухта_Микита.docx
Grade_3/ICT/lab_2_4/Report/: ТІК_Лаб_2_4_ІПЗ-3.04_Бухта_Микита.docx
Grade_3/ICT/lab_2_5/Report/: ТІК_Лаб_2_5_ІПЗ-3.04_Бухта_Микита.docx
Grade_3/IndustrialPractice/: readme.md  Бухта_Микита_ІПЗ_3_04_Звіт_Практика.docx  Бухта_Микита_ІПЗ_3_04_Щоденник_Практики.docx  Бухта_Микита_Миколайович_Презентація_Практика.pptx
Grade_3/LSSB/: readme.md  БЖДОП_Пр1_ІПЗ-3.04_Бухта_Микита.docx  БЖДОП_Пр3_ІПЗ-3.04_Бухта_Микита.docx  БЖДОП_Пр4_ІПЗ-3.04_Бухта_Микита.docx  БЖДОП_Пр5_ІПЗ-3.04_Бухта_Микита.docx  БЖДОП_Пр6_ІПЗ-3.04_Бухта_Микита.docx  БЖДОП_Реферат_ІПЗ-3.04_Бухта_Микита.docx  БЖДОП_лаб_7_ІПЗ-3.04_Бухта_Микита (1).docx
Grade_3/LSSB/lab_1/report/: .~lock.БЖДОП_Пр1_ІПЗ-3.04_Бухта_Микита.docx#
Grade_3/LSSB/lab_2/implementation/: БЖДОП_Пр2_ІПЗ-3.04_Бухта_Микита.docx
Grade_3/NumericalMethods/: .~lock.ЕМ_Лаб_1_ІПЗ-3.04_Бухта_Микита.docx#  readme.md
Grade_3/NumericalMethods/lab_1/implementation/: Task5_Lab1.mw  Task6_Lab1.mw
Grade_3/NumericalMethods/lab_2/implementation/: Task1_Lab2.mw  Task2_Lab2.mw  Task3_Lab2.mw  Task4_Lab2.mw
Grade_3/NumericalMethods/lab_2/report/: ЕМ_Лаб_2_ІПЗ-3.04_Бухта_Микита.docx
Grade_3/NumericalMethods/lab_3/implementation/: Task1_Lab3.mw  Task2_Lab3.mw  Task3_Lab3.mw  Task4_Lab3.mw  Task5_Lab3.mw
Grade_3/ODK/: readme.md
Grade_3/ProjectPracticum/: readme.md
Grade_3/ProjectPracticum/Lab_2/Implementation/: CMakeLists.txt
Grade_3/ProjectPracticum/Lab_2/Implementation/task_1/: CMakeLists.txt  Numbers.cpp  Numbers.hpp  main.cpp
Grade_3/ProjectPracticum/Lab_2/Implementation/task_3/: CMakeLists.txt  Numbers.cpp  Numbers.hpp  main.cpp
Grade_3/ProjectPracticum/Lab_2/Implementation/task_4/: CMakeLists.txt  Numbers.cpp  Numbers.hpp  main.cpp
Grade_3/ProjectPracticum/Lab_2/Implementation/task_5/: CMakeLists.txt  Stack.cpp  Stack.hpp  main.cpp
Grade_3/ProjectPracticum/Lab_3/Implementation/: CMakeLists.txt  CommonTypes.cpp  CommonTypes.hpp  Employee.cpp  Employee.hpp  IMenu.hpp  MainMenu.cpp  MainMenu.hpp  SalaryCalculator.cpp  SalaryCalculator.hpp  main.cpp
Grade_3/ProjectPracticum/Lab_4/Implementation/task_2/: CMakeLists.txt  Fraction.cpp  Fraction.hpp  main.cpp
Grade_3/ProjectPracticum/Lab_5/Implementation/: CMakeLists.txt  Matrix  Matrix.cpp  Matrix.hpp  Vector  Vector.cpp  Vector.hpp  main.cpp
Grade_3/ProjectPracticum/Lab_8/Implementation/: CMakeLists.txt  List  List.cpp  List.hpp  main.cpp
Grade_3/SMA/: readme.md
Grade_3/SMA/Lab_5/: class_diagram.mdj
Grade_3/SMA/Methodology/: Метод_вказівни_до_лаб_роб_МАПЗ_21_v4.docx
Grade_3/SRA/: readme.md
Grade_3/SystemAdministration/: readme.md
Grade_3/SystemAdministration/Work_4/: СА_Лаб_5_ІПЗ-3.04_Бухта_Микита.docx
Grade_3/TIN/: readme.md
Grade_3/WEB/: readme.md  startup_webpage.bash
Grade_4/: Титульний_Лист.docx
Grade_4/APPZ/: АППЗ лаб 1, Бухта М. ІПЗ 4.04.docx  АППЗ лаб 3, Бухта М. ІПЗ 4.04.docx  АППЗ лаб 4, Бухта М. ІПЗ 4.04.docx  АППЗ лаб 7, Бухта М. ІПЗ 4.04.docx  АППЗ реферат, Чергенцов М. ІПЗ 4.03.docx
Grade_4/APPZ/labs/: АППЗ лаб 2, Бухта М. ІПЗ 4.04.docx  АППЗ лаб 5, Бухта М. ІПЗ 4.04.docx  АППЗ лаб 6, Бухта М. ІПЗ 4.04.docx  АППЗ лаб 8, Бухта М. ІПЗ 4.04.docx
Grade_4/APPZ/prospectus/: АППЗ_Консп_1_ІПЗ-4.04_Бухта_Микита.docx  АППЗ_Консп_2_ІПЗ-4.04_Бухта_Микита.docx  АППЗ_Консп_3_ІПЗ-4.04_Бухта_Микита.docx  АППЗ_Консп_4_ІПЗ-4.04_Бухта_Микита.docx  АППЗ_Консп_5_ІПЗ-4.04_Бухта_Микита.docx  АППЗ_Консп_6_ІПЗ-4.04_Бухта_Микита.docx
Grade_4/DPCS/: README.md  Untitled.ipynb  lw-2.ipynb
Grade_4/DPCS/lab_1/: README.md
Grade_4/DPCS/lab_2/: Dockerfile
Grade_4/DPCS/lw-3/: index.html
Grade_4/DPCS/lw-4/: index.html
Grade_4/DPCS/lw-5/: index.html
Grade_4/Diploma/: Report_11. Бухта М.М..docx  budget_bee_class_diagram.vpd
Grade_4/Diploma/beta/: Diploma_0.1.1.docx
Grade_4/Diploma/docs/: Bukhta_Mykyta_diploma_application.docx
Grade_4/Diploma/release/: Presentation1.pptx  Бухта_Микита_ІПЗ-4.04_Диплом_Антиплагіат.docx  Диплом_Бухта_Микита_Презентація.pptx  Рецензия_Бухта.docx
Grade_4/Multythreading/Lab_1/: spec.txt
Grade_4/Multythreading/Lab_1/Lab_1_VSCode/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp  run_docker.sh
Grade_4/Multythreading/Lab_1/Lab_1_VSCode/SourceFiles/Core/: BaseInfoDisplayer.cpp  BaseInfoDisplayer.hpp  Starter.cpp  Starter.hpp
Grade_4/Multythreading/Lab_1/Lab_1_VSCode/SourceFiles/Launcher/: LaboratoryStarter.cpp  LaboratoryStarter.hpp
Grade_4/Multythreading/Lab_1/Lab_1_VSCode/SourceFiles/Tasks/: Task1.cpp  Task1.hpp  Task2.cpp  Task2.hpp  Task3.cpp  Task3.hpp  Task4.cpp  Task4.hpp
Grade_4/Multythreading/Lab_3/: sort_result.txt
Grade_4/Multythreading/Lab_3/implemetation/: CMakeLists.txt  Dockerfile
Grade_4/Multythreading/Lab_3/implemetation/SourceFiles/: Student.cpp  Student.hpp  common.cpp  common.hpp  main.cpp
Grade_4/Multythreading/Lab_4/: CMakeLists.txt  Dockerfile
Grade_4/Multythreading/Lab_4/SourceFiles/: ExperementalObject.cpp  ExperementalObject.hpp  NewThread.cpp  NewThread.hpp  WorkerRunnable.cpp  WorkerRunnable.hpp  main.cpp
Grade_4/Multythreading/Lab_5/: CMakeLists.txt
Grade_4/Multythreading/Lab_5/SourceFiles/: ThreadPool.cpp  ThreadPool.hpp  main.cpp
Grade_4/Practice/: ДОГОВІР_ПРО_ПАРТНЕРСТВО_ТА_ДІЛОВЕ_СПІВРОБІТНИЦТВО.docx  Договір на проведення практики.docx  Звіт_Практика_2025_ІПЗ-4.04_Бухта_Микита.docx  Щоденник_Практика_2025_ІПЗ-4.04_Бухта_Микита.docx
Grade_4/practice_docx/: Договір_на_проведення_практики_Бухта.docx
Grade_4/ПППІ/: Бухта_Микита_ІПЗ-4.04_ПППІ_Лаб_1.docx  Бухта_Микита_ІПЗ-4.04_ПППІ_Лаб_4.docx
Grade_4/стратегія/: Аналіз_інтернет-магазину з нуля .xlsx  Практичне_занняття_Робін_Гуд.docx  стратегии.drawio
(+236 files in other folders)
